--- a/src/main/resources/styleFolder/otherUiComponents.css
+++ b/src/main/resources/styleFolder/otherUiComponents.css
@@ -1,14 +1,22 @@
-.container {
-    -fx-background-color: #f5f5f5;
+ScrollPane, ScrollPane:focused {
+    -fx-border-color: grey;
+    -fx-focus-color: transparent;
 }
 
-.label {
+.main-chat-container {
+    -fx-background-color: #f5f5f5;
+    -fx-padding: 10px;
+    -fx-spacing: 10px;
+    -fx-alignment: baseline-center;
+}
+
+.main-label {
     -fx-text-fill: #333333;
     -fx-font-weight: 500;
     -fx-opacity: 0.9;
 }
 
-.button {
+.main-button {
     -fx-background-color: #642ab7;
     -fx-text-fill: white;
     -fx-font-weight: bold;
@@ -19,14 +27,13 @@
     -fx-transition: 0.3s;
 }
 
-.button:hover {
+.main-button:hover {
     -fx-background-color: #7b1fa2;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 8, 0, 0, 3);
     -fx-cursor: hand;
 }
 
-
-.text-field {
+.main-text-field {
     -fx-border-color: #bdbdbd;
     -fx-text-fill: #333333;
     -fx-font-size: 14px;
@@ -34,7 +41,7 @@
     -fx-transition: 0.3s;
 }
 
-.text-field:focused {
+.main-text-field:focused {
     -fx-border-color: #6200ee;
 }
 
